--- a/styles/index.css
+++ b/styles/index.css
@@ -1,19 +1,108 @@
 /* index.css */
 /* 1행==================================북극곰 후원 안내 */
-#wrap {}
+#wrap {}/* 기본값 유지를 위해 작성하지 않음. 기본값 -> 너비는 부모의 100%, 높이는 내용만큼 */
 #wrap .intro {
     height:100vh;
     background:url(../images/bg1.png) no-repeat center / cover;
+    position:relative;
 }
-#wrap .intro .container {}
-#wrap .intro .container h1:nth-child(1) {}
+#wrap .intro::after {
+    content:''; display:block;/* 가상요소(after)의 필수속성 */
+    width:100%; height:100%;
+    position:absolute; left:0; top:0;
+    background:linear-gradient(transparent,#000);
+    z-index:100;
+}
+#wrap .intro .container {
+    position:relative; z-index:200;
+    max-width:1250px;
+    min-width:320px;
+    margin:0 auto;/* 디바이스 크기보다 width가 작은 블록요소를 가운데 배치하는 방법 */
+    /* 형제-형제 margin, 부모-자식 padding */
+    padding-top:100px;
+    /* 자식, 자손이 인라인일 경우 수평정렬 text-align */
+    text-align:center;
+    /* 자식의 float 적용으로 인해 부모 바깥으로 나가는 문제해결 */
+    overflow:hidden;
+}
+#wrap .intro .container h1:nth-child(1) {
+    text-align:left;
+    margin:0 0 100px;
+}
 #wrap .intro .container h1:nth-child(1) a {}
 #wrap .intro .container h1:nth-child(1) a img {width:89px;}
-#wrap .intro .container h1:nth-child(2) {}
-#wrap .intro .container h1:nth-child(2) em {}
-#wrap .intro .container .sponsor_btn {}
-#wrap .intro .container .sponsor_question {}
+#wrap .intro .container h1:nth-child(2) {
+    color:#fff; font-size:4.375rem; line-height:1.3;
+}
+#wrap .intro .container h1:nth-child(2) em {
+    color:#fff; font-weight:700;
+}
+#wrap .intro .container .sponsor_btn {
+    display:block;
+    width:409px; margin:100px auto;
+    line-height:71px;/* 수직중앙 배치해야하는 글자가 1줄일 경우 height생략가능. line-height만 px값으로 적용 */
+    background:linear-gradient(90deg, #fe9300 , #ff7300);
+    border-radius:50px;
+    color:#fff; font-weight:700; font-size:2.125rem;
+}
+#wrap .intro .container .sponsor_question {
+    float:right; color:#fff; background:#000;
+    width:439px; height:51px; padding-top:10px;
+    font-size:1.625rem;
+    border-radius:30px;
+}
 /* 2행==================================퀴즈 */
+#wrap .quiz {
+    background:url(../images/quiz_bg.png) center / cover;
+    padding:150px 0;
+}
+#wrap .quiz .container {
+    width:1250px; border:1px solid aqua;
+    margin:0 auto;
+    display:grid;/* 왼쪽퀴즈, 오른쪽참여현황 정렬grid */
+    grid-template-columns:1fr 1fr;
+}
+#wrap .quiz .container #left_quiz {}
+#wrap .quiz .container #left_quiz * {color:#fff;}
+#wrap .quiz .container #left_quiz h2 {
+    text-align:center;
+    font-size:3.438rem; font-weight:500; letter-spacing:-1%;
+    margin-bottom:38px;
+}
+#wrap .quiz .container #left_quiz h3 {
+    font-size:1.25rem;
+}
+#wrap .quiz .container #left_quiz .list {
+    display:grid;
+    grid-template-rows:repeat(4,34px);
+    margin:8px 0 38px;
+}
+#wrap .quiz .container #left_quiz .list label {}
+#wrap .quiz .container #left_quiz .list label input[value*=q] {display:none;}
+#wrap .quiz .container #left_quiz .list label input[value*=q]:checked + span {
+    background-image:url(../images/chk_on.png);
+}
+#wrap .quiz .container #left_quiz .list label span {
+    background-image:url(../images/chk_off.png);
+    display:block;
+    /* 배경반복+배경위치+왼쪽여백+행간 설정 */
+    background-repeat:no-repeat;
+    line-height:34px;
+    padding-left:48px;
+    background-position-y:5px;
+}
+#wrap .quiz .container #left_quiz #answer_btn {
+    background:#050505;
+    width:100%;
+    height:54px;
+    border-radius:50px;
+    font-size:1.25rem;
+}
+#wrap .quiz .container .right {text-align:right;}
+#wrap .quiz .container .right p {}
+#wrap .quiz .container .right p:nth-child(1) {}
+#wrap .quiz .container .right p:nth-child(1) img {}
+#wrap .quiz .container .right p:nth-child(2) {color:#fff;}
 /* 3행==================================새끼북극곰 이야기 */
 /* 4행==================================빙하면적감소 */
 /* 5행==================================인류재앙 */
