--- a/styles/index.css
+++ b/styles/index.css
@@ -60,7 +60,6 @@ body * {transition:all 0.5s;}
 }
 #wrap .quiz .container {
     max-width:1250px; min-width:320px;
-    border:1px solid aqua;
     margin:0 auto;
     display:grid;/* 왼쪽퀴즈, 오른쪽참여현황 정렬grid */
     grid-template-columns:1fr 1fr;
@@ -130,7 +129,93 @@ body * {transition:all 0.5s;}
     color:#fff; font-weight:700; font-size:2.125rem;
 }
 /* 4행==================================빙하면적감소 */
+#wrap .glacier {
+    background:url(../images/50_bg.png) center / cover;
+    padding:200px;
+}
+#wrap .glacier .container {
+    margin:0 auto;
+    max-width:1250px; min-width:320px;
+}
+#wrap .glacier .container h2 {
+    color:#fff; font-size:3.438rem; font-weight:500; letter-spacing:-1%; line-height:120%;
+    margin-bottom:81px;
+}
+#wrap .glacier .container h2 em {color:#000; background-color:#fff;}
+#wrap .glacier .container p {
+    color:#fff; font-size:2.125rem; font-weight:700;
+    margin-bottom:81px;
+}
+#wrap .glacier .container p img {width:100%;}
 /* 5행==================================인류재앙 */
+#wrap .disaster {
+    background:#f5f5f5;
+    padding:200px 0;
+}
+#wrap .disaster .container {
+    max-width:1250px; min-width:320px;margin:0 auto;
+    /* 최소 320~최대 1250 사이 너비값은 가변형 세팅 */
+    /* (위) 큰 범위값 세팅 후 @media 규칙내에서 태블릿, 모바일에 맞는 레이아웃 재수정하며 반응형 제작 */
+    text-align:center;
+}
+#wrap .disaster .container h2 {
+    font-size:3.438rem; font-weight:500; line-height:120%; letter-spacing:-1%;
+    margin-bottom:55px;
+}
+#wrap .disaster .container > p {font-size:1.25rem; line-height:170%; margin-bottom:55px;}
+#wrap .disaster .container .list {
+    display:flex;
+    /* 옆으로 정렬하는 대상(li)의 부모(flex) */
+    /* flex의 자식요소들을 옆으로 정렬(기본값) flex-flow:row nowrap; */
+    gap:20px;
+}
+#wrap .disaster .container .list li {
+    background:#fff;
+    flex:1;
+}
+#wrap .disaster .container .list li .bg {
+    height:320px;
+    background-position:0 55%;
+    background-size:cover;
+    position:relative;
+    padding:48px 0;
+}
+#wrap .disaster .container .list li .bg::before {
+    content:''; display:block;
+    position:absolute; left:0; top:0; width:100%; height:100%;
+    /* (위) content~height속성까지 before 또는 after 가상요서 사용 시 필수속성 모음*/
+    background:linear-gradient(#000 10%, transparent 60%);
+    /* background:linear-gradient(#첫번째색상 위치%, #두번째색상 위치%); */
+    z-index:50;
+}
+#wrap .disaster .container .list li .bg h3 {
+    color:#fff; position:relative; z-index:60;
+    /* z-index 속성은 position속성이 선행되어야만 사용할 수 있는 중첩순서이다. */
+    font-size:2.688rem; font-weight:700; line-height:120%;
+}
+#wrap .disaster .container .list li .bg p {
+    color:#fff; position:relative; z-index:60;
+    font-size:1.25rem; line-height:170%;
+}
+#wrap .disaster .container .list li > p {
+    height:250px;
+    font-size:1.25rem; line-height:170%;
+    padding:20px 20px;
+}
+/* 5행 개별 배경 선택자 */
+#wrap .disaster .container .list li:nth-child(1) .bg {
+    background-image:url(../images/28.png);
+    background-position:center 70%;
+}
+#wrap .disaster .container .list li:nth-child(2) .bg {
+    background-image:url(../images/27.png);
+    background-position:0 50%;
+    background-size:cover;
+}
+#wrap .disaster .container .list li:nth-child(3) .bg {
+    background-image:url(../images/wwf.jpg);
+    background-size:cover;
+}
 /* 6행==================================지구위기 */
 /* 7행==================================WWF단체홍보 */
 /* 8행==================================다양한활동 */
