--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -16,6 +16,16 @@
     #wrap .ad .container .sponser_btn {
         width:270px;
         font-size:1.375rem;}
+    /* ==========================================4행 빙하면적 */
+    #wrap .glacier {padding:200px 80px;}
+    #wrap .glacier .container h2 {font-size:2.5rem; margin-bottom:40px;}
+    #wrap .glacier .container p {font-size:1.375rem; margin-bottom:40px;}
+    /* ================================5행 인류재항 */
+    #wrap .disaster {padding:200px 80px;}
+    #wrap .disaster .container h2 {font-size:2.5rem;}
+    #wrap .disaster .container > p {font-size:1rem;}
+    #wrap .disaster .container .list li .bg p {font-size:1rem;}
+    #wrap .disaster .container .list li > p {font-size:1rem;}
 }
 /* Mobile 849~320 */
 @media screen and (max-width:849px){
@@ -31,4 +41,19 @@
     #wrap .ad {padding:50px 15px;}
     #wrap .ad .container iframe {height:400px;}
     #wrap .ad .container h2 {font-size:1.375rem;}
+    /* ==========================================4행 빙하면적 */
+    #wrap .glacier {padding:70px 15px;}
+    #wrap .glacier .container h2 {font-size:1.375rem; margin-bottom:22px;}
+    #wrap .glacier .container p {font-size:0.813rem; letter-spacing:-2%; margin-bottom:22px; overflow:hidden;}
+    #wrap .glacier .container p img {width:200%; transform:translateX(-30%);}
+    /* ================5행 */
+    #wrap .disaster {padding:70px 15px;}
+    #wrap .disaster .container .list {flex-flow:column nowrap;}
+    #wrap .disaster .container h2 {font-size:1.375rem;}
+    #wrap .disaster .container > p {font-size:0.813rem;}
+    #wrap .disaster .container .list li .bg {height:150px;}
+    #wrap .disaster .container .list li .bg h3 {font-size:1.375rem;}
+    #wrap .disaster .container .list li > p {
+        height:max-content;
+        font-size:0.813rem;}
 }
